AM_CPPFLAGS= -Dsysconfdir=\"$(sysconfdir)/motion\" -DLOCALEDIR=\"$(localedir)\"
LDADD = $(LIBINTL)

bin_PROGRAMS = motion

motion_SOURCES = \
	alg.hpp alg.cpp  \
	conf.hpp conf.cpp  \
	dbse.hpp dbse.cpp  \
	draw.hpp draw.cpp  \
	event.hpp event.cpp  \
	ffmpeg.hpp ffmpeg.cpp  \
	jpegutils.hpp jpegutils.cpp  \
	logger.hpp logger.cpp  \
	motion.hpp motion.cpp  \
	netcam.hpp netcam.cpp  \
	netcam_ftp.hpp netcam_ftp.cpp  \
	netcam_http.hpp netcam_http.cpp  \
	netcam_jpeg.hpp netcam_jpeg.cpp  \
	netcam_rtsp.hpp netcam_rtsp.cpp  \
	netcam_wget.hpp netcam_wget.cpp  \
	picture.hpp picture.cpp  \
	rotate.hpp rotate.cpp  \
	track.hpp track.cpp  \
	translate.hpp translate.cpp  \
	util.hpp util.cpp  \
	video_bktr.hpp video_bktr.cpp  \
	video_common.hpp video_common.cpp  \
	video_loopback.hpp video_loopback.cpp  \
	video_v4l2.hpp video_v4l2.cpp  \
	webu.hpp webu.cpp  \
	webu_html.hpp webu_html.cpp  \
	webu_status.hpp webu_status.cpp  \
	webu_stream.hpp webu_stream.cpp  \
	webu_text.hpp webu_text.cpp  \
	mmx.hpp pwc-ioctl.hpp

